--- a/.gitignore
+++ b/.gitignore
@@ -27,23 +27,34 @@
 /build/msw/config.dmc
 /build/msw/makefile.dmc
 /build/msw/*c*_msw
-/build/msw/*c*_mswd
-/build/msw/*c*_mswu
+/build/msw/*c*_msw_x64
+/build/msw/*c*_msw[du]
+/build/msw/*c*_msw[du]_x64
 /build/msw/*c*_mswud
+/build/msw/*c*_mswud_x64
 /build/msw/*c*_mswdll
-/build/msw/*c*_mswddll
-/build/msw/*c*_mswudll
+/build/msw/*c*_mswdll_x64
+/build/msw/*c*_msw[du]dll
+/build/msw/*c*_msw[du]dll_x64
 /build/msw/*c*_mswuddll
+/build/msw/*c*_mswuddll_x64
 /build/msw/*c*_mswuniv
-/build/msw/*c*_mswunivd
-/build/msw/*c*_mswunivu
+/build/msw/*c*_mswuniv_x64
+/build/msw/*c*_mswuniv[du]
+/build/msw/*c*_mswuniv[du]_x64
 /build/msw/*c*_mswunivud
+/build/msw/*c*_mswunivud_x64
 /build/msw/*c*_mswunivdll
-/build/msw/*c*_mswunivddll
-/build/msw/*c*_mswunivudll
+/build/msw/*c*_mswunivdll_x64
+/build/msw/*c*_mswuniv[du]dll
+/build/msw/*c*_mswuniv[du]dll_x64
 /build/msw/*c*_mswunivuddll
+/build/msw/*c*_mswunivuddll_x64
 /build/msw/*c*_mswhdll
+/build/msw/*c*_mswhdll_x64
 /build/msw/*c*_mswuhdll
+/build/msw/*c*_mswuhdll_x64
+
 /build/msw/*.vcproj.*.user
 /build/msw/*.vcxproj.user
 /build/msw/vc*_mswud
@@ -65,34 +76,26 @@
 /demos/*/*.sln
 /demos/*/vc_msw
 /demos/*/vc_msw_x64
-/demos/*/vc_mswd
-/demos/*/vc_mswd_x64
-/demos/*/vc_mswu
-/demos/*/vc_mswu_x64
+/demos/*/vc_msw[du]
+/demos/*/vc_msw[du]_x64
 /demos/*/vc_mswud
 /demos/*/vc_mswud_x64
 /demos/*/vc_mswdll
 /demos/*/vc_mswdll_x64
-/demos/*/vc_mswddll
-/demos/*/vc_mswddll_x64
-/demos/*/vc_mswudll
-/demos/*/vc_mswudll_x64
+/demos/*/vc_msw[du]dll
+/demos/*/vc_msw[du]dll_x64
 /demos/*/vc_mswuddll
 /demos/*/vc_mswuddll_x64
 /demos/*/vc_mswuniv
 /demos/*/vc_mswuniv_x64
-/demos/*/vc_mswunivd
-/demos/*/vc_mswunivd_x64
-/demos/*/vc_mswunivu
-/demos/*/vc_mswunivu_x64
+/demos/*/vc_mswuniv[du]
+/demos/*/vc_mswuniv[du]_x64
 /demos/*/vc_mswunivud
 /demos/*/vc_mswunivud_x64
 /demos/*/vc_mswunivdll
 /demos/*/vc_mswunivdll_x64
-/demos/*/vc_mswunivddll
-/demos/*/vc_mswunivddll_x64
-/demos/*/vc_mswunivudll
-/demos/*/vc_mswunivudll_x64
+/demos/*/vc_mswuniv[du]dll
+/demos/*/vc_mswuniv[du]dll_x64
 /demos/*/vc_mswunivuddll
 /demos/*/vc_mswunivuddll_x64
 /demos/*/*Classic?Debug*
@@ -172,8 +175,7 @@
 /lib/base
 /lib/based
 /lib/basedll
-/lib/basedlld
-/lib/basedllu
+/lib/basedll[du]
 /lib/basedllud
 /lib/baseu
 /lib/baseud
@@ -188,14 +190,12 @@
 /lib/gcc_lib64
 /lib/jpeg*.lib
 /lib/ldef*.res
-/lib/Linux
-/lib/linux
+/lib/[Ll]inux
 /lib/linux-gnu
 /lib/msw
 /lib/mswd
 /lib/mswdll
-/lib/mswdlld
-/lib/mswdllu
+/lib/mswdll[du]
 /lib/mswdllud
 /lib/mswu
 /lib/mswud
@@ -207,10 +207,10 @@
 /lib/univd
 /lib/univdll
 /lib/univdlld
-/lib/vc_dll
-/lib/vc_lib
-/lib/vc_x64_dll
-/lib/vc_x64_lib
+/lib/vc*_dll
+/lib/vc*_lib
+/lib/vc*_x64_dll
+/lib/vc*_x64_lib
 /lib/wat_lib
 /lib/winmm32_sc.lib
 /lib/wsock32_sc.lib
@@ -267,34 +267,26 @@
 # /samples/
 /samples/**/vc_msw
 /samples/**/vc_msw_x64
-/samples/**/vc_mswd
-/samples/**/vc_mswd_x64
-/samples/**/vc_mswu
-/samples/**/vc_mswu_x64
+/samples/**/vc_msw[du]
+/samples/**/vc_msw[du]_x64
 /samples/**/vc_mswud
 /samples/**/vc_mswud_x64
 /samples/**/vc_mswdll
 /samples/**/vc_mswdll_x64
-/samples/**/vc_mswddll
-/samples/**/vc_mswddll_x64
-/samples/**/vc_mswudll
-/samples/**/vc_mswudll_x64
+/samples/**/vc_msw[du]dll
+/samples/**/vc_msw[du]dll_x64
 /samples/**/vc_mswuddll
 /samples/**/vc_mswuddll_x64
 /samples/**/vc_mswuniv
 /samples/**/vc_mswuniv_x64
-/samples/**/vc_mswunivd
-/samples/**/vc_mswunivd_x64
-/samples/**/vc_mswunivu
-/samples/**/vc_mswunivu_x64
+/samples/**/vc_mswuniv[du]
+/samples/**/vc_mswuniv[du]_x64
 /samples/**/vc_mswunivud
 /samples/**/vc_mswunivud_x64
 /samples/**/vc_mswunivdll
 /samples/**/vc_mswunivdll_x64
-/samples/**/vc_mswunivddll
-/samples/**/vc_mswunivddll_x64
-/samples/**/vc_mswunivudll
-/samples/**/vc_mswunivudll_x64
+/samples/**/vc_mswuniv[du]dll
+/samples/**/vc_mswuniv[du]dll_x64
 /samples/**/vc_mswunivuddll
 /samples/**/vc_mswunivuddll_x64
 
@@ -305,8 +297,7 @@
 
 # /src/
 /src/FreeBSD
-/src/Linux
-/src/linux
+/src/[Ll]inux
 /src/linux-gnu
 /src/Makefile.in
 /src/*.lo
@@ -361,34 +352,26 @@
 # /tests/
 /tests/vc_msw
 /tests/vc_msw_x64
-/tests/vc_mswd
-/tests/vc_mswd_x64
-/tests/vc_mswu
-/tests/vc_mswu_x64
+/tests/vc_msw[du]
+/tests/vc_msw[du]_x64
 /tests/vc_mswud
 /tests/vc_mswud_x64
 /tests/vc_mswdll
 /tests/vc_mswdll_x64
-/tests/vc_mswddll
-/tests/vc_mswddll_x64
-/tests/vc_mswudll
-/tests/vc_mswudll_x64
+/tests/vc_msw[du]dll
+/tests/vc_msw[du]dll_x64
 /tests/vc_mswuddll
 /tests/vc_mswuddll_x64
 /tests/vc_mswuniv
 /tests/vc_mswuniv_x64
-/tests/vc_mswunivd
-/tests/vc_mswunivd_x64
-/tests/vc_mswunivu
-/tests/vc_mswunivu_x64
+/tests/vc_mswuniv[du]
+/tests/vc_mswuniv[du]_x64
 /tests/vc_mswunivud
 /tests/vc_mswunivud_x64
 /tests/vc_mswunivdll
 /tests/vc_mswunivdll_x64
-/tests/vc_mswunivddll
-/tests/vc_mswunivddll_x64
-/tests/vc_mswunivudll
-/tests/vc_mswunivudll_x64
+/tests/vc_mswuniv[du]dll
+/tests/vc_mswuniv[du]dll_x64
 /tests/vc_mswunivuddll
 /tests/vc_mswunivuddll_x64
 /tests/test.opt
