Added new tests to check clipping box calculations for wxDC and wxGCDC.
See #17013

--- a/tests/makefile.bcc
+++ b/tests/makefile.bcc
@@ -166,6 +166,7 @@ TEST_GUI_OBJECTS =  \
 	$(OBJS)\test_gui_measuring.obj \
 	$(OBJS)\test_gui_affinematrix.obj \
 	$(OBJS)\test_gui_boundingbox.obj \
+	$(OBJS)\test_gui_clippingbox.obj \
 	$(OBJS)\test_gui_config.obj \
 	$(OBJS)\test_gui_bitmapcomboboxtest.obj \
 	$(OBJS)\test_gui_bitmaptogglebuttontest.obj \
@@ -855,6 +856,9 @@ $(OBJS)\test_gui_affinematrix.obj: .\graphics\affinematrix.cpp
 
 $(OBJS)\test_gui_boundingbox.obj: .\graphics\boundingbox.cpp
 	$(CXX) -q -c -P -o$@ $(TEST_GUI_CXXFLAGS) .\graphics\boundingbox.cpp
+
+$(OBJS)\test_gui_clippingbox.obj: .\graphics\clippingbox.cpp
+	$(CXX) -q -c -P -o$@ $(TEST_GUI_CXXFLAGS) .\graphics\clippingbox.cpp
 
 $(OBJS)\test_gui_config.obj: .\config\config.cpp
 	$(CXX) -q -c -P -o$@ $(TEST_GUI_CXXFLAGS) .\config\config.cpp
