--- a/tests/test_vc9_test_gui.vcproj
+++ b/tests/test_vc9_test_gui.vcproj
@@ -835,6 +835,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\graphics\clippingbox.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\sizers\boxsizer.cpp"
 				>
 			</File>
