--- a/tests/test_vc7_test_gui.vcproj
+++ b/tests/test_vc7_test_gui.vcproj
@@ -320,6 +320,9 @@
 				RelativePath=".\graphics\boundingbox.cpp">
 			</File>
 			<File
+				RelativePath=".\graphics\clippingbox.cpp">
+			</File>
+			<File
 				RelativePath=".\sizers\boxsizer.cpp">
 			</File>
 			<File
