--- a/tests/test_vc8_test_gui.vcproj
+++ b/tests/test_vc8_test_gui.vcproj
@@ -863,6 +863,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\graphics\clippingbox.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\sizers\boxsizer.cpp"
 				>
 			</File>
