--- a/src/stc/stc.interface.h.in
+++ b/src/stc/stc.interface.h.in
@@ -455,6 +455,7 @@ public:
     void SetToken(int val);
     void SetAnnotationLinesAdded(int val);
     void SetUpdated(int val);
+    void SetListCompletionMethod(int val);
     void SetDragText(const wxString& val);
     void SetDragFlags(int flags);
     void SetDragResult(wxDragResult val);
@@ -482,6 +483,7 @@ public:
     int  GetToken() const;
     int  GetAnnotationsLinesAdded() const;
     int  GetUpdated() const;
+    int  GetListCompletionMethod() const;
     
     /**
         @deprecated Use GetString() instead.
