--- a/src/stc/stc.h.in
+++ b/src/stc/stc.h.in
@@ -555,6 +555,7 @@ public:
     void SetToken(int val)                { m_token = val; }
     void SetAnnotationLinesAdded(int val) { m_annotationLinesAdded = val; }
     void SetUpdated(int val)              { m_updated = val; }
+    void SetListCompletionMethod(int val) { m_listCompletionMethod = val; }
 #ifdef  STC_USE_DND
     // Kept for backwards compatibility, use SetString().
     void SetDragText(const wxString& val) { SetString(val); }
@@ -593,6 +594,7 @@ public:
     int  GetToken() const                 { return m_token; }
     int  GetAnnotationsLinesAdded() const { return m_annotationLinesAdded; }
     int  GetUpdated() const               { return m_updated; }
+    int  GetListCompletionMethod() const  { return m_listCompletionMethod; }
     
 #ifdef STC_USE_DND
     // Kept for backwards compatibility, use GetString().
@@ -637,6 +639,7 @@ private:
     int m_token;                // wxEVT_STC__MODIFIED with SC_MOD_CONTAINER 
     int m_annotationLinesAdded; // wxEVT_STC_MODIFIED with SC_MOD_CHANGEANNOTATION 
     int m_updated;              // wxEVT_STC_UPDATEUI
+    int m_listCompletionMethod;
 
 #if wxUSE_DRAG_AND_DROP
     int      m_dragFlags;       // wxEVT_STC_START_DRAG
