--- a/tests/test_vc7_test_gui.vcproj
+++ b/tests/test_vc7_test_gui.vcproj
@@ -413,6 +413,9 @@
 				RelativePath=".\controls\gaugetest.cpp">
 			</File>
 			<File
+				RelativePath=".\graphics\graphmatrix.cpp">
+			</File>
+			<File
 				RelativePath=".\sizers\gridsizer.cpp">
 			</File>
 			<File
