--- a/tests/test_vc8_test_gui.vcproj
+++ b/tests/test_vc8_test_gui.vcproj
@@ -1019,6 +1019,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\graphics\graphmatrix.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\sizers\gridsizer.cpp"
 				>
 			</File>
