--- a/tests/test_vc9_test_gui.vcproj
+++ b/tests/test_vc9_test_gui.vcproj
@@ -991,6 +991,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\graphics\graphmatrix.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\sizers\gridsizer.cpp"
 				>
 			</File>
