--- a/tests/makefile.vc
+++ b/tests/makefile.vc
@@ -171,6 +171,7 @@ TEST_GUI_OBJECTS =  \
 	$(OBJS)\test_gui_affinematrix.obj \
 	$(OBJS)\test_gui_boundingbox.obj \
 	$(OBJS)\test_gui_clippingbox.obj \
+	$(OBJS)\test_gui_graphmatrix.obj \
 	$(OBJS)\test_gui_config.obj \
 	$(OBJS)\test_gui_bitmapcomboboxtest.obj \
 	$(OBJS)\test_gui_bitmaptogglebuttontest.obj \
@@ -1036,6 +1037,9 @@ $(OBJS)\test_gui_boundingbox.obj: .\graphics\boundingbox.cpp
 
 $(OBJS)\test_gui_clippingbox.obj: .\graphics\clippingbox.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(TEST_GUI_CXXFLAGS) .\graphics\clippingbox.cpp
+
+$(OBJS)\test_gui_graphmatrix.obj: .\graphics\graphmatrix.cpp
+	$(CXX) /c /nologo /TP /Fo$@ $(TEST_GUI_CXXFLAGS) .\graphics\graphmatrix.cpp
 
 $(OBJS)\test_gui_config.obj: .\config\config.cpp
 	$(CXX) /c /nologo /TP /Fo$@ $(TEST_GUI_CXXFLAGS) .\config\config.cpp
