--- a/tests/test_gui.vcxproj
+++ b/tests/test_gui.vcxproj
@@ -529,6 +529,7 @@
     <ClCompile Include="graphics\bitmap.cpp" />
     <ClCompile Include="graphics\boundingbox.cpp" />
     <ClCompile Include="graphics\clippingbox.cpp" />
+    <ClCompile Include="graphics\graphmatrix.cpp" />
     <ClCompile Include="graphics\colour.cpp" />
     <ClCompile Include="graphics\ellipsization.cpp" />
     <ClCompile Include="graphics\measuring.cpp" />
