--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ matrix:
           compiler: clang
           env: wxCONFIGURE_FLAGS="--disable-shared"
         - os: osx
+          osx_image: beta-xcode6.2
           compiler: clang
           env: wxCONFIGURE_FLAGS="--enable-cxx11" wxMAKEFILE_FLAGS="CXXFLAGS='-std=c++11 -stdlib=libc++'"
 
