--- a/src/stc/stc.h.in
+++ b/src/stc/stc.h.in
@@ -609,7 +609,7 @@ public:
     bool GetControl() const;
     bool GetAlt() const;
 
-    virtual wxEvent* Clone() const { return new wxStyledTextEvent(*this); }
+    virtual wxEvent* Clone() const wxOVERRIDE { return new wxStyledTextEvent(*this); }
 
 #ifndef SWIG
 private:
