Add CMake to Appveyor
Build with “Visual Studio 12 (2013)” 32-bit Release DLLs
Other configurations can later be added in the appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,6 +26,10 @@ environment:
   - TOOLSET: msys2
     MSYSTEM: MINGW32
   - TOOLSET: cygwin
+  - TOOLSET: cmake
+    GENERATOR: 'Visual Studio 12'
+    SHARED: ON
+    CONFIGURATION: Release
 
 clone_depth: 50
 
