--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,13 @@ sudo: required
 
 matrix:
     include:
+        - dist: trusty
+          compiler: gcc
+          env: wxTOOLSET=cmake wxCMAKE_GENERATOR="Unix Makefiles"
+        - os: osx
+          osx_image: beta-xcode6.2
+          compiler: clang
+          env: wxTOOLSET=cmake wxCMAKE_GENERATOR=Xcode wxCMAKE_DEFINES="-DCMAKE_CXX_STANDARD=11"
         - compiler: gcc
         - compiler: gcc
           env: wxCONFIGURE_FLAGS="--disable-precomp-headers --enable-monolithic"
