--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ matrix:
         - os: osx
           osx_image: xcode6.4
           compiler: clang
-          env: wxCONFIGURE_FLAGS="--enable-cxx11" wxMAKEFILE_FLAGS="CXXFLAGS='-std=c++11 -stdlib=libc++'"
+          env: wxCONFIGURE_FLAGS="--enable-cxx11" wxMAKEFILE_FLAGS="CXXFLAGS='-std=c++11 -stdlib=libc++'" wxSKIP_SAMPLES=1
 
 branches:
     only:
@@ -51,7 +51,7 @@ script: |
     popd &&
     echo -en 'travis_fold:end:script.3\\r' &&
     echo 'Building the samples...' && echo -en 'travis_fold:start:script.4\\r' &&
-    make samples &&
+    (test -n "$wxSKIP_SAMPLES" && make samples || echo "*** Skipping building samples ***) &&
     echo -en 'travis_fold:end:script.4\\r' &&
     echo 'Installing...' && echo -en 'travis_fold:start:script.5\\r' &&
     sudo make install &&
