Clean before building using installed library in Travis CI
The minimal sample had been already built as part of "make samples", so clean
it before rebuilding it using the installed library version, otherwise we
never do anything in this step.

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,5 +54,6 @@ script:
     - sudo make install
     - echo -en 'travis_fold:end:script.install\\r'
     - echo 'Testing installation...' && echo -en 'travis_fold:start:script.testinstall\\r'
+    - make -C samples/minimal -f makefile.unx clean
     - make -C samples/minimal -f makefile.unx $wxMAKEFILE_FLAGS
     - echo -en 'travis_fold:end:script.testinstall\\r'
