--- a/samples/makefile.vc
+++ b/samples/makefile.vc
@@ -32,11 +32,29 @@ MAKEARGS = CC="$(CC)" CXX="$(CXX)" CFLAGS="$(CFLAGS)" CXXFLAGS="$(CXXFLAGS)" \
 
 ### Conditionally set variables: ###
 
+!if "$(USE_HTML)" == "1"
+__aui___depname = sub_aui
+!endif
+!if "$(USE_HTML)" == "1"
+__help___depname = sub_help
+!endif
+!if "$(USE_HTML)" == "1"
+__htlbox___depname = sub_htlbox
+!endif
+!if "$(USE_HTML)" == "1"
+__html___depname = sub_html
+!endif
+!if "$(USE_HTML)" == "1"
+__richtext___depname = sub_richtext
+!endif
+!if "$(USE_HTML)" == "1"
+__xrc___depname = sub_xrc
+!endif
 
 
 ### Targets: ###
 
-all: sub_access sub_animate sub_artprov sub_aui sub_calendar sub_caret sub_clipboard sub_collpane sub_combo sub_config sub_console sub_dataview sub_dialogs sub_dialup sub_display sub_dll sub_dnd sub_docview sub_dragimag sub_drawing sub_erase sub_event sub_except sub_exec sub_font sub_grid sub_help sub_htlbox sub_html sub_image sub_internat sub_ipc sub_joytest sub_keyboard sub_layout sub_listctrl sub_mdi sub_mediaplayer sub_menu sub_minimal sub_nativdlg sub_notebook sub_oleauto sub_opengl sub_ownerdrw sub_popup sub_power sub_preferences sub_printing sub_propgrid sub_regtest sub_render sub_ribbon sub_richtext sub_sashtest sub_scroll sub_secretstore sub_shaped sub_sockets sub_sound sub_splash sub_splitter sub_statbar sub_stc sub_svg sub_taborder sub_taskbar sub_text sub_thread sub_toolbar sub_treectrl sub_typetest sub_uiaction sub_validate sub_vscroll sub_webview sub_widgets sub_wizard sub_wrapsizer sub_xrc
+all: sub_access sub_animate sub_artprov $(__aui___depname) sub_calendar sub_caret sub_clipboard sub_collpane sub_combo sub_config sub_console sub_dataview sub_dialogs sub_dialup sub_display sub_dll sub_dnd sub_docview sub_dragimag sub_drawing sub_erase sub_event sub_except sub_exec sub_font sub_grid $(__help___depname) $(__htlbox___depname) $(__html___depname) sub_image sub_internat sub_ipc sub_joytest sub_keyboard sub_layout sub_listctrl sub_mdi sub_mediaplayer sub_menu sub_minimal sub_nativdlg sub_notebook sub_oleauto sub_opengl sub_ownerdrw sub_popup sub_power sub_preferences sub_printing sub_propgrid sub_regtest sub_render sub_ribbon $(__richtext___depname) sub_sashtest sub_scroll sub_secretstore sub_shaped sub_sockets sub_sound sub_splash sub_splitter sub_statbar sub_stc sub_svg sub_taborder sub_taskbar sub_text sub_thread sub_toolbar sub_treectrl sub_typetest sub_uiaction sub_validate sub_vscroll sub_webview sub_widgets sub_wizard sub_wrapsizer $(__xrc___depname)
 
 clean: 
 	-if exist .\*.obj del .\*.obj
@@ -307,10 +325,12 @@ sub_artprov:
 	$(MAKE) -f makefile.vc $(MAKEARGS) all
 	cd "$(MAKEDIR)"
 
+!if "$(USE_HTML)" == "1"
 sub_aui: 
 	cd aui
 	$(MAKE) -f makefile.vc $(MAKEARGS) all
 	cd "$(MAKEDIR)"
+!endif
 
 sub_calendar: 
 	cd calendar
@@ -422,20 +442,26 @@ sub_grid:
 	$(MAKE) -f makefile.vc $(MAKEARGS) all
 	cd "$(MAKEDIR)"
 
+!if "$(USE_HTML)" == "1"
 sub_help: 
 	cd help
 	$(MAKE) -f makefile.vc $(MAKEARGS) all
 	cd "$(MAKEDIR)"
+!endif
 
+!if "$(USE_HTML)" == "1"
 sub_htlbox: 
 	cd htlbox
 	$(MAKE) -f makefile.vc $(MAKEARGS) all
 	cd "$(MAKEDIR)"
+!endif
 
+!if "$(USE_HTML)" == "1"
 sub_html: 
 	cd html
 	$(MAKE) -f makefile.vc $(MAKEARGS) all
 	cd "$(MAKEDIR)"
+!endif
 
 sub_image: 
 	cd image
@@ -557,10 +583,12 @@ sub_ribbon:
 	$(MAKE) -f makefile.vc $(MAKEARGS) all
 	cd "$(MAKEDIR)"
 
+!if "$(USE_HTML)" == "1"
 sub_richtext: 
 	cd richtext
 	$(MAKE) -f makefile.vc $(MAKEARGS) all
 	cd "$(MAKEDIR)"
+!endif
 
 sub_sashtest: 
 	cd sashtest
@@ -687,10 +715,12 @@ sub_wrapsizer:
 	$(MAKE) -f makefile.vc $(MAKEARGS) all
 	cd "$(MAKEDIR)"
 
+!if "$(USE_HTML)" == "1"
 sub_xrc: 
 	cd xrc
 	$(MAKE) -f makefile.vc $(MAKEARGS) all
 	cd "$(MAKEDIR)"
+!endif
 
 sub_flash: 
 	cd flash
