--- a/samples/makefile.gcc
+++ b/samples/makefile.gcc
@@ -37,6 +37,9 @@ MAKEARGS = LINK_DLL_FLAGS="$(LINK_DLL_FLAGS)" \
 ifeq ($(USE_HTML),1)
 __aui___depname = aui
 endif
+ifeq ($(USE_EXCEPTIONS),1)
+__except___depname = except
+endif
 ifeq ($(USE_HTML),1)
 __help___depname = help
 endif
@@ -56,7 +59,7 @@ endif
 
 ### Targets: ###
 
-all: access animate artprov $(__aui___depname) calendar caret clipboard collpane combo config console dataview dialogs dialup display dll dnd docview dragimag drawing erase event except exec font grid $(__help___depname) $(__htlbox___depname) $(__html___depname) image internat ipc joytest keyboard layout listctrl mdi mediaplayer menu minimal nativdlg notebook oleauto opengl ownerdrw popup power preferences printing propgrid regtest render ribbon $(__richtext___depname) sashtest scroll secretstore shaped sockets sound splash splitter statbar stc svg taborder taskbar text thread toolbar treectrl typetest uiaction validate vscroll webview widgets wizard wrapsizer $(__xrc___depname)
+all: access animate artprov $(__aui___depname) calendar caret clipboard collpane combo config console dataview dialogs dialup display dll dnd docview dragimag drawing erase event $(__except___depname) exec font grid $(__help___depname) $(__htlbox___depname) $(__html___depname) image internat ipc joytest keyboard layout listctrl mdi mediaplayer menu minimal nativdlg notebook oleauto opengl ownerdrw popup power preferences printing propgrid regtest render ribbon $(__richtext___depname) sashtest scroll secretstore shaped sockets sound splash splitter statbar stc svg taborder taskbar text thread toolbar treectrl typetest uiaction validate vscroll webview widgets wizard wrapsizer $(__xrc___depname)
 
 clean: 
 	-if exist .\*.o del .\*.o
@@ -211,8 +214,10 @@ erase:
 event: 
 	$(MAKE) -C event -f makefile.gcc $(MAKEARGS) all
 
+ifeq ($(USE_EXCEPTIONS),1)
 except: 
 	$(MAKE) -C except -f makefile.gcc $(MAKEARGS) all
+endif
 
 exec: 
 	$(MAKE) -C exec -f makefile.gcc $(MAKEARGS) all
